--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,3 +14,13 @@
     "tailwind.config.js"
   ]
 }
+
+// // "paths": {
+//   "@/": ["src/"],
+//   "@app/": ["src/app/"],
+//   "@components/": ["src/components/"],
+//   "@lib/": ["src/lib/"],
+//   "@constants/": ["src/constants/"],
+//   "@providers/": ["src/providers/"],
+//   "@assets/": ["assets/"]
+// }
